<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainScreenFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_money_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/light_gray"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:layout_marginTop="@dimen/size_3"
            android:layout_marginStart="@dimen/size_5"
            android:text="@string/main_screen_cv_title"/>

        <TextView
            android:id="@+id/tv_money_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_marginBottom="@dimen/size_2"
            android:layout_marginStart="@dimen/size_5"
            android:text="@string/main_screen_cv_money_amount"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_rv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_rv_title"
        android:textSize="30sp"
        android:layout_marginTop="@dimen/size_5"
        app:layout_constraintTop_toBottomOf="@id/cv_money_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cards"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/cards_items"
        android:layout_marginBottom="@dimen/size_2"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/bt_add_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rv_title" />

    <TextView
        android:id="@+id/tv_empty_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_money_total"/>

    <Button
        android:id="@+id/bt_add_card"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:text="@string/main_screen_bt_add_card"
        android:layout_marginStart="@dimen/size_8"
        android:layout_marginBottom="@dimen/size_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_cards" />

    <Button
        android:id="@+id/bt_pay_qr"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:text="@string/main_screen_bt_qr_pay"
        android:layout_marginEnd="@dimen/size_8"
        android:layout_marginBottom="@dimen/size_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_cards" />
</androidx.constraintlayout.widget.ConstraintLayout>