<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddCardFragment"
    android:layout_margin="@dimen/size_4">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_card_fragment_title"
        android:textSize="30sp"
        android:layout_marginTop="@dimen/size_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_4"
        android:hint="@string/login_tv_name"
        android:inputType="textPersonName"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_tv_last_name"
        android:inputType="textPersonName"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_4"
        android:hint="@string/add_card_fragment_num_card"
        android:inputType="number"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_security_code"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_card_fragment_sec_code"
        android:inputType="numberPassword"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_security_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:inputType="numberPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_card_type"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/size_9"
        android:background="@color/light_gray"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tf_exp_date"
        app:layout_constraintStart_toEndOf="@+id/tf_security_code"
        app:layout_constraintTop_toBottomOf="@+id/tf_number"
        tools:text="American Express" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_exp_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_card_fragment_exp_num"
        app:errorEnabled="true"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_security_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_exp_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/size_4"
        android:layout_marginRight="16dp"
        android:enabled="false"
        android:text="@string/add_card_fragment_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_exp_date" />

</androidx.constraintlayout.widget.ConstraintLayout>